# cecmap

./: CHANGES.rst  MANIFEST.in  README.rst  cec_client.py  picec.py  picec.service  setup.cfg  setup.py
.github/workflows/: main.yml
cecmap/config/: default.cfg
picec/: __init__.py  __main__.py  cli.py  commands.py  device.py
picec/config/: __init__.py  lgmagic.cfg  lgmagic.py
