[metadata]
name             = picec
version          = 0.0.4
description      = Cursor control via CEC
url              = https://github.com/coldfix/picec
long_description = file: README.rst
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
license          = Unlicense
license_file     = UNLICENSE
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Desktop Environment
    Topic :: Multimedia
    Topic :: Utilities
long_description_content_type = text/x-rst

[options]
packages =
    picec
    picec.config
zip_safe = true
python_requires = >=3.6
install_requires =
    cec
    pynput
    notify2

[options.entry_points]
console_scripts =
    picec = picec:main
